# lmdb-tui

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  SPECS.md  Todo.md  ai_analysis_prompt.md  build.rs  mkdocs.yml  tui_analysis_report.json
.claude/: settings.local.json
benches/: scan.rs
docs/: README.md  configuration.md  getting-started.md  index.md  llms.txt  tui-testing.md  webassembly.md
experiments/: README.md  create_test_databases.py  fast_test.sh  lock.mdb  quick_test.sh  run_all_tests.sh  test_lmdb_tui.sh  test_report.md
proto/: lmdb.proto
scripts/: analyze_snapshots.py  cross_build.sh  generate_llms_txt.py  generate_manifests.py  run_tui_tests.sh  wasm_build.sh
src/: app.rs  bookmarks.rs  commands.rs  config.rs  constants.rs  errors.rs  export.rs  grpc.rs  lib.rs  main.rs  plugins.rs  remote.rs  util.rs  wasm.rs  worker.rs
test_env/: lock.mdb
test_snapshots/: edge_cases_empty_query_mode_000.json  edge_cases_long_query_string_003.json  edge_cases_rapid_navigation_down_001.json  edge_cases_rapid_navigation_up_002.json  edge_cases_report.json  main_navigation_help_closed_002.ansi  main_navigation_help_closed_002.json  main_navigation_help_closed_002.txt  main_navigation_help_displayed_001.json  main_navigation_initial_main_view_000.ansi  main_navigation_initial_main_view_000.json  main_navigation_report.json  query_functionality_main_before_query_000.json  query_functionality_query_after_backspace_005.ansi  query_functionality_query_after_backspace_005.json  query_functionality_query_after_backspace_005.txt  query_functionality_query_mode_entered_001.json  query_functionality_query_mode_entered_001.txt  query_functionality_query_mode_exited_006.json  query_functionality_query_navigation_down_003.ansi  query_functionality_query_navigation_down_003.json  query_functionality_query_navigation_up_004.json  query_functionality_query_typed_user_002.ansi  query_functionality_query_typed_user_002.json  query_functionality_report.json  query_patterns_jsonpath_query_entered_006.ansi  query_patterns_jsonpath_query_entered_006.json  query_patterns_jsonpath_query_entered_006.txt  query_patterns_jsonpath_query_results_007.json  query_patterns_prefix_query_entered_000.ansi  query_patterns_prefix_query_entered_000.json  query_patterns_prefix_query_entered_000.txt  query_patterns_prefix_query_results_001.json  query_patterns_range_query_entered_002.ansi  query_patterns_range_query_entered_002.json  (+70 more)
tests/: README.md  app.rs  cli.rs  (+15 more)
(+51 files in other folders)
