[package]
name = "lmdb-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[lib]
name = "lmdb_tui"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
heed = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[package.metadata]
authors = ["TODO"]
