[package]
name = "lmdb-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[lib]
name = "lmdb_tui"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
heed = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonpath_lib = "0.3"
base64 = "0.21"
rmp-serde = "1"
csv = "1"
indicatif = "0.17"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"

[package.metadata]
authors = ["Nikola Balic @nibzard"]
