[package]
name = "lmdb-tui"
version = "0.2.3"
edition = "2021"
rust-version = "1.78"
license = "Apache-2.0"

[lib]
name = "lmdb_tui"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lmdb-grpc-server"
path = "src/bin/grpc_server.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.26"
notify = "6.1"
fuzzy-matcher = "0.3"
heed = "0.20"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
anyhow = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonpath_lib = "0.3"
serde_yaml = "0.9"
toml = "0.8"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
base64 = "0.21"
rmp-serde = "1"
csv = "1"
indicatif = "0.17"
once_cell = "1"
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
wasm-logger = "0.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
criterion = "0.5"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "lmdb-tui-agent"
path = "src/bin/agent.rs"

[build-dependencies]
tonic-build = "0.10"

[package.metadata]
authors = ["Nikola Balic @nibzard"]
